force-app/main/default/objects/copado__Promotion__c/fields/cml_Caused_Business_Disruption__c.field-meta.xml
<CustomField>
    <fullName>cml_Caused_Business_Disruption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Promotion caused a Business Disruption</description>
    <label>Caused Business Disruption</label>
    <type>Checkbox</type>
</CustomField>