force-app/main/default/objects/copado__Promotion__c/fields/copadometrics__Caused_Business_Disruption__c.field-meta.xml
<CustomField>
    <fullName>copadometrics__Caused_Business_Disruption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caused Business Disruption?</label>
    <type>Checkbox</type>
</CustomField>