force-app/main/default/objects/copado__Promotion__c/fields/copadometrics__Destination_is_a_Production_Org__c.field-meta.xml
<CustomField>
    <fullName>copadometrics__Destination_is_a_Production_Org__c</fullName>
    <formula>If(NOT(ISNULL(copado__Destination_Environment__c)), copado__Destination_Environment__r.copadometrics__Production_Org__c, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination is a Production Org?</label>
    <type>Checkbox</type>
</CustomField>