force-app/main/default/objects/copado__Promotion__c/listViews/Recent_Promotions.listView-meta.xml
<ListView>
    <fullName>Recent_Promotions</fullName>
    <columns>NAME</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Destination_Environment__c</columns>
    <columns>copado__Back_Promotion__c</columns>
    <columns>copado__Platform__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Promotions</label>
    <sharedTo>
        <role>Release_Manager</role>
    </sharedTo>
</ListView>